# OpenGL_Starter

./: .gitignore  CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: main.cpp
